packages/theme/src/client/styles/components/code.scss
@import "../_variables";

// ===============================
// Forked and modified from prismjs/themes/prism-tomorrow.css

code[class*="language-"],
pre[class*="language-"] {
  color: #ccc;
  background: none;
  font-family: var(--font-family-code);
  font-size: 1em;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  line-height: 1.5;

  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;

  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

/* Code blocks */
pre[class*="language-"] {
  padding: 1em;
  margin: 0.5em 0;
  overflow: auto;
}

:not(pre) > code[class*="language-"],
pre[class*="language-"] {
  background: #2d2d2d;
}

/* Inline code */
:not(pre) > code[class*="language-"] {
  padding: 0.1em;
  border-radius: 0.3em;
  white-space: normal;
}

.token.comment,
.token.block-comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #999;
}

.token.punctuation {
  color: #ccc;
}

.token.tag,
.token.attr-name,
.token.namespace,
.token.deleted {
  color: #ec5975;
}

.token.function-name {
  color: #6196cc;
}

.token.boolean,
.token.number,
.token.function {
  color: #f08d49;
}

.token.property,
.token.class-name,
.token.constant,
.token.symbol {
  color: #f8c555;
}

.token.selector,
.token.important,
.token.atrule,
.token.keyword,
.token.builtin {
  color: #cc99cd;
}

.token.string,
.token.char,
.token.attr-value,
.token.regex,
.token.variable {
  color: #7ec699;
}

.token.operator,
.token.entity,
.token.url {
  color: #67cdcc;
}

.token.important,
.token.bold {
  font-weight: bold;
}
.token.italic {
  font-style: italic;
}

.token.entity {
  cursor: help;
}

.token.inserted {
  color: #3eaf7c;
}

// ===============================

.theme-gungnir-content {
  pre,
  pre[class*="language-"] {
    line-height: 1.4;
    padding: 3rem 1.5rem 1.25rem;
    margin: 0.85rem 0;
    border-radius: 6px;
    overflow: auto;

    code {
      color: #fff;
      padding: 0;
      background-color: transparent;
      border-radius: 0;
      overflow-wrap: unset;
      -webkit-font-smoothing: auto;
      -moz-osx-font-smoothing: auto;
    }
  }

  .line-number {
    font-family: var(--font-family-code);
  }
}

div[class*="language-"] {
  position: relative;
  background-color: var(--code-bg-color);
  border-radius: 5px;
  box-shadow: 0 4px 9px rgba(0, 0, 0, 45%);

  .fullscreen-code-button {
    position: absolute;
    top: 16px;
    left: 54px;
    content: "";
    width: 11px;
    height: 11px;
    border-radius: 50%;
    background-color: #27c93f;
    box-shadow: -18px 0 0 0 #ffbd2e, -36px 0 0 0 #ff5f56;
    z-index: 3;
    cursor: pointer;
  }

  &::before {
    position: absolute;
    z-index: 3;
    top: 0.8em;
    right: 1em;
    font-size: 0.75rem;
    color: var(--code-ln-color);
  }

  pre,
  pre[class*="language-"] {
    // force override the background color to be compatible with shiki
    background: transparent !important;
    position: relative;
    z-index: 1;
  }

  .highlight-lines {
    user-select: none;
    padding-top: 3.05rem;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    line-height: 1.4;

    .highlight-line {
      background-color: var(--code-hl-bg-color);
    }
  }

  &:not(.line-numbers-mode) {
    .line-numbers {
      display: none;
    }
  }

  &.line-numbers-mode {
    .highlight-lines .highlight-line {
      position: relative;

      &::before {
        content: " ";
        position: absolute;
        z-index: 2;
        left: 0;
        top: 0;
        display: block;
        width: var(--code-ln-wrapper-width);
        height: 100%;
      }
    }

    pre {
      margin-left: var(--code-ln-wrapper-width);
      padding-left: 1rem;
      vertical-align: middle;
    }

    .line-numbers {
      position: absolute;
      top: 0;
      width: var(--code-ln-wrapper-width);
      text-align: center;
      color: var(--code-ln-color);
      padding-top: 3rem;
      line-height: 1.4;
      counter-reset: line-number;

      .line-number {
        position: relative;
        z-index: 3;
        user-select: none;
        height: 1.4em;

        &::before {
          counter-increment: line-number;
          content: counter(line-number);
          font-size: 0.85em;
        }
      }
    }
  }

  &.fullscreen-mode {
    .highlight-lines {
      padding-top: 3.95rem;
    }

    &.line-numbers-mode .line-numbers {
      padding-top: 3.95rem;
    }
  }
}

.custom-container.details div[class*="language-"] {
  box-shadow: none;
  margin: 0.85rem -1.6rem;
  border-radius: 0;
}

@each $lang in $codeLang {
  div[class*="language-"].ext-#{$lang} {
    &:before {
      content: "" + $lang;
    }
  }
}

// narrow mobile
@media (max-width: $MQMobileNarrow) {
  div[class*="language-"] {
    box-shadow: none;
  }

  .theme-gungnir-content {
    div[class*="language-"] {
      margin: 0.85rem 0;
    }
  }
}

